bug 36441, added ErrorDocument 404

--- a/main.conf
+++ b/main.conf
@@ -1,6 +1,9 @@
 # Configuration file for all the main porjects
 # *.wikipedia, etc.
 
+# Bug 36441:
+ErrorDocument 404 /w/404.php
+
 <IfModule mod_php5.c>
  php_admin_flag engine off
 </IfModule>
