bug 36513: makes deployment.wmflabs.org a redirect

--- a/main.conf
+++ b/main.conf
@@ -9,6 +9,11 @@ ErrorDocument 404 /w/404.php
 </IfModule>
 
 <VirtualHost *>
+ServerName deployment.wmflabs.org
+Redirect / http://deployment.wikimedia.beta.wmflabs.org/
+</VirtualHost>
+
+<VirtualHost *>
     ServerName beta.wmflabs.org
 
     Redirect / http://deployment.wikimedia.beta.wmflabs.org/
