Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,2 +1,7 @@
 [project]
 	state = active
+	description = Configuration for Apache as deployed on the cluster.
+[receive]
+	requireChangeId = true
+[submit]
+	mergeContent = true
