--- a/project.config
+++ b/project.config
@@ -5,3 +5,10 @@
 	requireChangeId = true
 [submit]
 	mergeContent = true
+[access "refs/*"]
+	owner = group Administrators
+	owner = group wmf
+	read = group Anonymous Users
+	label-Code-Review = -2..+2 group wmf
+	label-Verified = -1..+1 group wmf
+	submit = group wmf
