Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,8 +7,8 @@
 	mergeContent = true
 [access "refs/*"]
 	owner = group Administrators
-	owner = group wmf
 	read = group Anonymous Users
-	label-Code-Review = -2..+2 group wmf
+	label-Code-Review = -2..+2 group ops
+	label-Verified = -1..+1 group ops
 	label-Verified = -1..+1 group wmf
-	submit = group wmf
+	submit = group ops
