Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,6 +9,7 @@
 	owner = group Administrators
 	read = group Anonymous Users
 	label-Code-Review = -2..+2 group ops
+	label-Code-Review = -1..+1 group wmf
 	label-Verified = -1..+1 group ops
 	label-Verified = -1..+1 group wmf
 	submit = group ops
