redirect (302) /w/ to /w/index.php
Since lot of people tends to use http://lang.project.org/w/ , we might
as well redirect them to index.php directly instead of serving a 403.

Change-Id: I1780f5b7f54eeaa4591a5b385ae12ba8e264a9a7

--- a/main.conf
+++ b/main.conf
@@ -26,6 +26,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/mediawiki/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -79,6 +80,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wiktionary.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -146,6 +148,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiquote.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -252,6 +255,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -340,6 +344,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikibooks.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -406,6 +411,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikisource.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -472,6 +478,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikinews.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -535,6 +542,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiversity.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
