remove old commented out snippets
Before using rcs, csv, svn, git, we used to comment out all code in
configuration file.  Nowadays, it is no more needed and even tends to
confuse people as to why the code is still there.

For historical purposes, please note BV means "Brion Vibber".

Change-Id: Ibe0e7eee140556ab396cb484ccb3baf5eb899027

--- a/httpd.conf
+++ b/httpd.conf
@@ -1057,9 +1057,6 @@ ErrorDocument 404 /w/404.php
 
 NameVirtualHost *
 
-# Disabling to test -- 2003-11-30 BV FIXME
-####Include /apache/conf/throttle.conf
-
 # Includes
 
 # Note, the order is important
@@ -1079,17 +1076,6 @@ Include /usr/local/apache/conf/main.conf
 # A few single-subdomain projects
 Include /usr/local/apache/conf/remnant.conf
 
-# Set the bad_bots environment variable based on various criteria
-# Include /usr/local/apache/conf/bots.conf
-
-# boards.wikimedia.org
-# DISABLED 2004-11-18 --brion
-#Include /usr/local/apache/conf/boards.conf
-
-# upload.wikimedia.org
-# DISABLED as this is now done on albert 2005-02-26 --brion
-#Include /usr/local/apache/conf/upload.conf
-
 # secure.wikimedia.org unencrypted backend
 Include /usr/local/apache/conf/wikimedia-ssl-backend.conf
 
@@ -1099,7 +1085,8 @@ Include /usr/local/apache/conf/wikimedia.conf
 # wikimediafoundation.org and its aliases
 Include /apache/conf/foundation.conf
 
-# A simple redirect to en, perhaps this once contained the load balancing redirect
+# A simple redirect to en, perhaps this once contained the load balancing
+# redirect
 Include /usr/local/apache/conf/en2.conf
 
 # A couple of redirects for www.XXX.wikipedia.org
