redirect wikidata.org to [[m:wikidata]]
(instead of enwiki Main Page)

Change-Id: I0f244484a5a638799588017bd8eb1fe076cb84a1

--- a/redirects.conf
+++ b/redirects.conf
@@ -571,6 +571,10 @@
     RewriteCond %{HTTP_HOST} wikimedia.com$
     RewriteRule ^(.*)$ http://wikimedia.org/ [R=301,L]
 
+    # wikidata.org redirect
+    RewriteCond %{HTTP_HOST} wikidata.org$
+    RewriteRule ^(.*)$ http://meta.wikimedia.org/wiki/Wikidata [R=302,L]
+
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
