--- a/main.conf
+++ b/main.conf
@@ -26,6 +26,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/mediawiki/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -76,6 +77,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wiktionary.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -143,6 +145,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiquote.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -254,6 +257,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -342,6 +346,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikibooks.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -408,6 +413,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikisource.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -474,6 +480,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikinews.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
@@ -537,6 +544,7 @@
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiversity.org/w/index.php
     RewriteRule ^/$ /w/index.php
+    RewriteRule ^/w/$ /w/index.php [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
