update several live hacks:
dzahn: redirects for education/outreach per RT-3138. thx Jeff

dzahn: existing educacao redirect which was live but somebody forgot to
       commit

robh: added wiki-pedia.org redirects to wikipedia.org

Change-Id: Ibaf9b3a1ba76dfece634826f5681d1bc90604dda

--- a/redirects.conf
+++ b/redirects.conf
@@ -25,6 +25,7 @@
         dk.wikipedia.org \
         dk.wikibooks.org \
         dk.wiktionary.org \
+        educacao.wikimedia.org \
         education.wikimedia.org \
         en2.wikipedia.org \
         epo.wikipedia.org \
@@ -86,6 +87,7 @@
         wikimediacommons.org *.wikimediacommons.org \
         wikiknihy.cz *.wikiknihy.cz \
         wikipaedia.net *.wikipaedia.net \
+        wiki-pedia.org *.wiki-pedia.org \
         wikipedia.at *.wikipedia.at \
         wikipedia.ch *.wikipedia.ch \
         wikipedia.co.uk *.wikipedia.co.uk \
@@ -266,7 +268,18 @@
     RewriteCond %{HTTP_HOST} ^en2.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} ^education.wikimedia.org
+    RewriteCond %{HTTP_HOST} ^educacao.wikimedia.org
+    RewriteRule ^(.*)$ http://pt.wikipedia.org/wiki/Wikipédia:WU [R=301,L]
+
+    RewriteCond %{HTTP_HOST} ^education\.wikimedia\.org$
+    RewriteCond %{REQUEST_URI} ^/casestudies$
+    RewriteRule ^(.*)$ http://outreach.wikimedia.org/wiki/Education/Case_Studies [R=301,L]
+
+    RewriteCond %{HTTP_HOST} ^education\.wikimedia\.org$
+    RewriteCond %{REQUEST_URI} ^/(content|copyediting|definitions|featuredarticle|fivecriteria|illustrations|milestones|peerreviews|photos|reflectivepapers|translationarabic|translationspanish|videos|writearticle)$
+    RewriteRule ^(.*)$ http://outreach.wikimedia.org/wiki/Education/Case_Studies/%1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} ^education\.wikimedia\.org$
     RewriteRule ^(.*)$ http://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L]
 
     RewriteCond %{HTTP_HOST} ([a-z]+).wikipedia.(com|net|info)
@@ -278,7 +291,10 @@
     RewriteCond %{HTTP_HOST} wikipedia.co.uk$
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} ([a-z]+).wikipaedia.net
+    RewriteCond %{HTTP_HOST} ([a-z]+).wiki-pedia.org$
+    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} ([a-z]+).wikipaedia.net$
     RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} ^wikipaedia.net$
