modified redirects.conf for educacao.wikimedia.org per RT #3138
Change-Id: Ia52930752d32dedfee879be5c37780bab5265716

--- a/redirects.conf
+++ b/redirects.conf
@@ -269,7 +269,7 @@
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} ^educacao.wikimedia.org
-    RewriteRule ^(.*)$ http://pt.wikipedia.org/wiki/Wikipédia:WU [R=301,L]
+    RewriteRule ^(.*)$ http://pt.wikipedia.org/wiki/WP:WU [R=301,L]
 
     RewriteCond %{HTTP_HOST} ^education\.wikimedia\.org$
     RewriteCond %{REQUEST_URI} ^/casestudies$
