comment out redirect cfp.wikimania.wm
cfp.wikimania.wikimedia.org -> radian.org:8080

target's dead

Change-Id: I79d8465e21cdb16b35b682054c14328dbc7106c4

--- a/redirects.conf
+++ b/redirects.conf
@@ -540,8 +540,9 @@
     RewriteCond %{HTTP_HOST} nostalgia.wikimedia.org
     RewriteRule ^/(.*)$ http://nostalgia.wikipedia.org/$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} cfp.wikimania.wikimedia.org
-    RewriteRule ^/(.*)$ http://radian.org:8080/$1 [R=301,L]
+    # dead redirect target as of 2012-06-27. obsolete anyway
+    #RewriteCond %{HTTP_HOST} cfp.wikimania.wikimedia.org
+    #RewriteRule ^/(.*)$ http://radian.org:8080/$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} hu.wikimedia.org
     RewriteRule ^/(.*)$ http://wiki.media.hu/$1 [R=302,L]
