redirecting wikimediafoundation.org/wiki/Donate -> donate.wikimedia.org
Change-Id: Ib58f80410c06ff99acb078c5de3c6dff16949170

--- a/foundation.conf
+++ b/foundation.conf
@@ -38,6 +38,8 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    RewriteRule ^/wiki/Donate$ http://donate.wikimedia.org/ [R=301,L]
+
     <Directory "/usr/local/apache/common/docroot/foundation/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
