re-syncing git to svn, :-(
Change-Id: I2654e034ff706e24f4d59f0c983b5f47776c7c5a

--- a/foundation.conf
+++ b/foundation.conf
@@ -4,9 +4,8 @@
 
     AllowEncodedSlashes On
 
-    # Some additional CGI scripts
-    # for donation tracking...
-#    ScriptAlias /cgi-bin/ "/home/wikipedia/cgi-bin/wikimediafoundation.org/"
+    # Some additional CGI scripts for donation tracking...
+    #ScriptAlias /cgi-bin/ "/home/wikipedia/cgi-bin/wikimediafoundation.org/"
     ScriptAlias /cgi-bin/ "/usr/local/apache/common-local/cgi-bin/wikimediafoundation.org/"
 
     RewriteEngine On
@@ -38,7 +37,7 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    RewriteRule ^/wiki/Donate$ http://donate.wikimedia.org/ [R=301,L]
+    RewriteRule ^/wiki/Donate$ https://donate.wikimedia.org/ [R=301,L]
 
     <Directory "/usr/local/apache/common/docroot/foundation/w">
         <IfModule mod_php5.c>
