--- a/main.conf
+++ b/main.conf
@@ -182,27 +182,26 @@
 
 # Donate wiki is here instead of remnants.conf because it needs to catch donate.wikipedia.org
 # and the 'wikipedia' server's wildcard ServerAlias would otherwise apply
- <VirtualHost *>
+<VirtualHost *>
     ServerName donate.wikimedia.org
     ServerAlias donate.wikipedia.org
-
     DocumentRoot "/usr/local/apache/common/docroot/donate"
-
     AllowEncodedSlashes On
-
     RewriteEngine On
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/donate/w/index.php
-    #RewriteRule ^/$ /w/index.php
-    RewriteRule ^/$ http://donate.wikimedia.org/wiki/Special:FundraiserRedirector [R=302,L]
+
+    # Push to SSL
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule (.) https://donate.wikimedia.org%{REQUEST_URI} [R=301]
+
+    RewriteRule ^/$ https://donate.wikimedia.org/wiki/Special:FundraiserRedirector [R=302,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
     RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
-
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
     <Directory "/usr/local/apache/common/docroot/donate/w">
         <IfModule mod_php5.c>
