--- a/redirects.conf
+++ b/redirects.conf
@@ -578,7 +578,7 @@
 
     # donate wiki
     RewriteCond %{HTTP_HOST} (www\.)?donate\..*
-    RewriteRule ^/(.*)$ http://donate.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://donate.wikimedia.org/$1 [R=301,L]
 
     # Redirecting from subdirectories of wikipedia.org to subdomains
     RewriteCond %{HTTP_HOST} ^wikipedia.(com|org)
