--- a/www.wikipedia.conf
+++ b/www.wikipedia.conf
@@ -184,5 +184,26 @@
 </VirtualHost>
 
 
+<VirtualHost *>
+    ServerName wikidata.org
+    Redirect permanent / http://www.wikidata.org/
+</VirtualHost>
+
+<VirtualHost *>
+    ServerName www.wikidata.org
+
+    DocumentRoot /usr/local/apache/common/docroot/www.wikidata.org
+    php_admin_flag engine on
+
+    RewriteEngine On
+
+    # Front page...
+    RewriteRule ^/$ /w/extract2.php?title=Www.wikidata.org_portal&template=Www.wikidata.org_template [L]
+
+    # search-redirect.php, let it through
+    RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
+</VirtualHost>
+
+
 # vim: sts=4 sw=4 syn=apache autoindent
 
