--- a/redirects.conf
+++ b/redirects.conf
@@ -67,6 +67,7 @@
         wikijunior.net *.wikijunior.net \
         wikijunior.org *.wikijunior.org \
         wikimania.wikimedia.org \
+        labs.wikimedia.org \
         wikimaps.org *.wikimaps.org \
         wikimaps.com *.wikimaps.com \
         wikimedia.cz *.wikimedia.cz \
@@ -574,6 +575,11 @@
 
     RewriteCond %{HTTP_HOST} wikimania.wikimedia.org
     RewriteRule ^/(.*)$ http://wikimania2012.wikimedia.org/$1 [R=302,L]
+
+    # labs -> labsconsole
+
+    RewriteCond %{HTTP_HOST} labs.wikimedia.org
+    RewriteRule . https://labsconsole.wikimedia.org/ [R=302,L]
 
     # donate wiki
     RewriteCond %{HTTP_HOST} (www\.)?donate\..*
