wikipedie.cz/experti_na_prirodu: short URL redir
for use in PR campaign per RT 3244, RT 3245

Change-Id: I6f16f6498fe3bb2d278367630d62284d5d494bc3

--- a/redirects.conf
+++ b/redirects.conf
@@ -552,14 +552,16 @@
 
     # The CZ and CS redirects are only in place until the CZ Chapter gets their own wiki up and running.
 
-    RewriteCond %{HTTP_HOST} cz.wikimedia.org
-    RewriteRule ^/(.*)$ http://meta.wikimedia.org/wiki/Wikimedia_Czech_Republic [R=301,L]
+    RewriteCond %{HTTP_HOST} (.*)wikipedie.cz
+    RewriteRule ^/experti_na_prirodu$ http://cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chr%C3%A1n%C4%9Bn%C3%A1_%C3%BAzem%C3%AD/Experti_na_p%C5%99%C3%ADrodu [NC,R=302,L]
 
-    RewriteCond %{HTTP_HOST} cs.wikimedia.org
-    RewriteRule ^/(.*)$ http://meta.wikimedia.org/wiki/Wikimedia_Czech_Republic [R=301,L]
+    RewriteCond %{HTTP_HOST} (.*)wikipedie.cz
+    RewriteRule . http://cs.wikipedia.org/ [R=301,L]
 
+    RewriteCond %{HTTP_HOST} cz.wikimedia.org [OR]
+    RewriteCond %{HTTP_HOST} cs.wikimedia.org [OR]
     RewriteCond %{HTTP_HOST} (.*)wikimedia.cz
-    RewriteRule ^/(.*)$ http://meta.wikimedia.org/wiki/Wikimedia_Czech_Republic [R=301,L]
+    RewriteRule . http://meta.wikimedia.org/wiki/Wikimedia_Czech_Republic [R=301,L]
 
     # pt.wikimedia.org got moved to wikimedia.pt
 
