--- a/redirects.conf
+++ b/redirects.conf
@@ -552,6 +552,9 @@
 
     # The CZ and CS redirects are only in place until the CZ Chapter gets their own wiki up and running.
 
+    RewriteCond %{HTTP_HOST} (.*)wikipedie.cz
+    RewriteRule ^/experti_na_prirodu$ http://cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chr%C3%A1n%C4%9Bn%C3%A1_%C3%BAzem%C3%AD/Experti_na_p%C5%99%C3%ADrodu [NC,R=302,L] # Gerrit change I6f16f6498fe3bb2d2
+
     RewriteCond %{HTTP_HOST} cz.wikimedia.org
     RewriteRule ^/(.*)$ http://meta.wikimedia.org/wiki/Wikimedia_Czech_Republic [R=301,L]
 
