favicon.php test
This is to abstract out the favicon.ico laying in the apache docroot and
ultimately have only one shared docroot.

Change-Id: Idbb12599a1372f20e870a90da03429dbe647a545

--- a/main.conf
+++ b/main.conf
@@ -67,6 +67,9 @@
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
+    # Test for making favicon.ico a script
+    RewriteRule ^/test-favicon\.ico$ /w/favicon.php [L]
+
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z]+)\.wiktionary\.org
