wikipedie.cz/experti_na_prirodu followup (again)
followup I6f16f6498fe3bb, Iaf3a68d5001d0a

still didn't work, was being overescaped (%xx -> %25xx)

now used NE (noescape) + escaped % w/ a backslash (\%xx)

RT 3244, RT 3245

Change-Id: I45266eacf4002ea1cb4256ab2d46ee3b270d5e48

--- a/redirects.conf
+++ b/redirects.conf
@@ -396,7 +396,7 @@
     RewriteRule ^/(.*)$ http://cs.wikibooks.org/$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (.*)wikipedie.cz
-    RewriteRule ^/experti_na_prirodu$ http://cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chr%C3%A1n%C4%9Bn%C3%A1_%C3%BAzem%C3%AD/Experti_na_p%C5%99%C3%ADrodu [NC,R=302,L] # Gerrit change I6f16f6498fe3bb2d2
+    RewriteRule ^/experti_na_prirodu$ http://cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chr\%C3\%A1n\%C4\%9Bn\%C3\%A1_\%C3\%BAzem\%C3\%AD/Experti_na_p\%C5\%99\%C3\%ADrodu [NC,NE,R=302,L] # Gerrit change I6f16f6498fe3bb2d2
 
     RewriteCond %{HTTP_HOST} ([a-z]+\.)?wikipedie\.cz$
     RewriteRule ^/(.*)$ http://cs.wikipedia.org/$1 [R=301,L]
