redirects.conf cleanup
* Removed some of the more ridiculous *.donate.* aliases, including many
  that don't resolve and some that we don't even own.
* Fixed broken regexes, especially unescaped dots and unanchored regexes.
  Replaced them with plain string comparison where possible since that's
  harder to screw up.
* Removed RewriteRule directives for some hosts that aren't in the
  ServerAlias list, such as  test-de.wikipedia.org
* In RewriteRule ^/?$ the ? is not really necessary since an empty path
  part is not possible
* Folded unnecessary RewriteCond ^/casestudies$ into the rewrite rule
* Removed quickipedia.*, wikipedia.walon.org, wikipedia.de, wikipedia.at,
  wikipedia.pl, wikipedia.nl, wikipedia.be, wikipedia.org.br,
  wikipedia.fr, vikipedio.*, wikimedia.cz, wikipedia.ch, wikimedia.hu,
  wikimediacommons.de, wikimedia.li, wikimedia.pl, wikimedia.se,
  wikimania200*.org, since none of those domains belong to us or point
  to us.
* Removed commented-out entries, we have version control
* Replaced the various methods of doing an optional subdomain match
  with "(^|\.)", since it's simple and has no risk of under- or
  over-matching
* Replaced various methods of matching a required subdomain with
  ".+\.", better than [a-z]+ since it will match zh-tw
* Removed leading slash from various RewriteRule patterns, for consistency
* For rules which funnel all URLs in the source to a single URL at the
  destination, use a short pattern regex "."
* Removed "assorted rubbish".
* Reduced the scope of overly broad shop.* and store.* rules
* Removed www.nds.wikipedia.org, www.wikibooks.org, www.wikiquote.org,
  wikiquote.org, www.commons.wikipedia.org, wikinews.org: redundant with
  other rules and/or virtual hosts.
* Added some <IfModule> sections for easier testing
* Fixed encoding of Wikipédia:WU, Apache was outputting a non-canonical
  URL encoding
* Fixed missing ServerAlias for wikimemory.org

In wikimedia.conf: Added redirects for obsolete ch, be and nl country
po

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -166,6 +166,11 @@
     # Main page portal
     RewriteRule ^/$ /w/extract2.php?title=Www.wikimedia.org_portal&template=Www.wikimedia.org_template [L]
 
+    # Redirects for country portals from the old URLs
+    RewriteRule ^/ch-portal/?$ http://wikipedia.ch/ [R=301,L]
+    RewriteRule ^/be-portal/?$ http://wikipedia.be/ [R=301,L]
+    RewriteRule ^/nl-portal/?$ http://wikipedia.nl/ [R=301,L]
+
     AddDefaultCharset Off
     ExpiresActive On
 
