Fix shop and donate redirects
Move shop and donate redirects above wildcards such as
*.wikimediafoundation.org, so that they will take precedence. Added
shop.wikipedia.com per RT 2488.

Change-Id: I02b1af043a1f05db89de560ea6724b8ddf91cf91

--- a/redirects.conf
+++ b/redirects.conf
@@ -117,6 +117,7 @@
         donate.wikispecies.org \
         donate.wikiversity.org \
         donate.wiktionary.org \
+        shop.wikipedia.com store.wikipedia.com \
         shop.wiktionary.org store.wiktionary.org \
         shop.wikiquote.org store.wikiquote.org \
         shop.wikibooks.org store.wikibooks.org \
@@ -147,6 +148,44 @@
     DocumentRoot /usr/local/apache/common/docroot/default
 
     RewriteEngine On
+
+    # Shop redirects
+    RewriteCond %{HTTP_HOST} =shop.wiktionary.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wiktionary.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikiquote.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikiquote.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikibooks.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikibooks.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikiquote.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikiquote.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikinews.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikinews.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikisource.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikisource.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikiversity.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikiversity.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.mediawiki.org [OR]
+    RewriteCond %{HTTP_HOST} =store.mediawiki.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikimediafoundation.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikimediafoundation.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =store.wikipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =shop.wikipedia.com [OR]
+    RewriteCond %{HTTP_HOST} =store.wikipedia.com
+    RewriteRule . http://shop.wikimedia.org/ [R=301,L]
+
+    # donate wiki
+    RewriteCond %{HTTP_HOST} =donate.mediawiki.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikibooks.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikimediafoundation.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikinews.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikipedia.com [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikiquote.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikisource.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikispecies.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wikiversity.org [OR]
+    RewriteCond %{HTTP_HOST} =donate.wiktionary.org
+    RewriteRule ^(.*)$ https://donate.wikimedia.org$1 [R=301,L]
 
     # Language aliases
 
@@ -450,29 +489,6 @@
     RewriteCond %{HTTP_HOST} =species.wikipedia.org
     RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L]
 
-    # Shop redirects
-    RewriteCond %{HTTP_HOST} =shop.wiktionary.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wiktionary.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikiquote.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikiquote.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikibooks.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikibooks.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikiquote.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikiquote.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikinews.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikinews.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikisource.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikisource.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikiversity.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikiversity.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.mediawiki.org [OR]
-    RewriteCond %{HTTP_HOST} =store.mediawiki.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikimediafoundation.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikimediafoundation.org [OR]
-    RewriteCond %{HTTP_HOST} =shop.wikipedia.org [OR]
-    RewriteCond %{HTTP_HOST} =store.wikipedia.org
-    RewriteRule . http://shop.wikimedia.org/ [R=301,L]
-
     RewriteCond %{HTTP_HOST} =bugs.mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
     RewriteRule ^(.*)$ http://bugzilla.wikimedia.org$1 [R=302,L]
@@ -509,19 +525,6 @@
     # labs -> labsconsole
     RewriteCond %{HTTP_HOST} =labs.wikimedia.org
     RewriteRule . https://labsconsole.wikimedia.org/ [R=302,L]
-
-    # donate wiki
-    RewriteCond %{HTTP_HOST} =donate.mediawiki.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikibooks.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikimediafoundation.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikinews.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikipedia.com [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikiquote.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikisource.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikispecies.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wikiversity.org [OR]
-    RewriteCond %{HTTP_HOST} =donate.wiktionary.org
-    RewriteRule ^(.*)$ https://donate.wikimedia.org$1 [R=301,L]
 
     # Redirecting from subdirectories of wikipedia.org to subdomains
     RewriteCond %{HTTP_HOST} =wikipedia.org
