Special:ShortURL redirect RT-2121
Change-Id: Ide15f27e7837ddfa3350cafb415966c36bd6776f

--- a/main.conf
+++ b/main.conf
@@ -233,6 +233,9 @@
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
+
     # zero redirect to english message
     RewriteCond %{HTTP_HOST} zero\.wikipedia\.org
     RewriteRule ^/(.*)$ http://en.zero.wikipedia.org/wiki/Special:ZeroRatedMobileAccess [R=302,L]
