apache rewrite rules to allow swift to call image scaler directly
Change-Id: I03f84ca544ca0e959220e7594c0578a5be4f1d0a

--- a/main.conf
+++ b/main.conf
@@ -20,6 +20,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/mediawiki/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     # Our FAQ
     RewriteRule ^/FAQ$ http://www.mediawiki.org/wiki/Help:FAQ [R=301,L]
 
@@ -75,6 +78,9 @@
     RewriteCond %{HTTP_HOST} ([a-z]+)\.wiktionary\.org
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wiktionary/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wiktionary.org/w/index.php
@@ -138,6 +144,9 @@
     # Now use it
     #RewriteRule ^/upload/(.*)$ /upload/%1/$1
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     # Send www.de.wikiquote.org -> de.wikiquote.org
     RewriteCond %{HTTP_HOST} www.([a-z-]+).wikiquote.(com|net|org)
@@ -248,6 +257,9 @@
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     # Standard intrawiki rewrites
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
@@ -337,6 +349,9 @@
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikibooks/%1/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikibooks.org/w/index.php
     RewriteRule ^/$ /w/index.php
@@ -402,6 +417,9 @@
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikisource\.org
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikisource/%1/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikisource.org/w/index.php
@@ -469,6 +487,9 @@
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikinews/%1/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikinews.org/w/index.php
     RewriteRule ^/$ /w/index.php
@@ -531,6 +552,9 @@
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikiversity\.org
     # Now use it
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikiversity/%1/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiversity.org/w/index.php
