--- a/remnant.conf
+++ b/remnant.conf
@@ -30,6 +30,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/meta/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/meta/w">
         <IfModule mod_php5.c>
           php_admin_flag engine on
@@ -65,6 +68,9 @@
     # Uploads are offsite (except on yaseo)
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/sources/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/sources/w">
         <IfModule mod_php5.c>
@@ -105,6 +111,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/commons/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -138,6 +147,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/grants/w">
         <IfModule mod_php5.c>
@@ -179,6 +191,9 @@
     # Uploads are offsite (except on yaseo)
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
   <Directory "/usr/local/apache/common/docroot/wikimania2005/w">
    <IfModule mod_php5.c>
@@ -225,6 +240,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2006/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
   <Directory "/usr/local/apache/common/docroot/wikimania2006/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
@@ -263,6 +281,9 @@
     # Uploads are offsite (except on yaseo)
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2007/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
   <Directory "/usr/local/apache/common/docroot/wikimania2007/w">
    <IfModule mod_php5.c>
@@ -303,6 +324,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2008/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
   <Directory "/usr/local/apache/common/docroot/wikimania2008/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
@@ -341,6 +365,9 @@
     # Uploads are offsite (except on yaseo)
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2009/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
   <Directory "/usr/local/apache/common/docroot/wikimania2009/w">
    <IfModule mod_php5.c>
@@ -381,6 +408,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2010/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
   <Directory "/usr/local/apache/common/docroot/wikimania2010/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
@@ -420,6 +450,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2011/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
   <Directory "/usr/local/apache/common/docroot/wikimania2011/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
@@ -458,6 +491,9 @@
     # Uploads are offsite (except on yaseo)
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2012/$1 [R=302]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
   <Directory "/usr/local/apache/common/docroot/wikimania2012/w">
    <IfModule mod_php5.c>
@@ -499,6 +535,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/wikimania2013/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
   <Directory "/usr/local/apache/common/docroot/wikimania2013/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
@@ -534,6 +573,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/internal/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -567,6 +609,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/board/w">
         <IfModule mod_php5.c>
@@ -602,6 +647,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/boardgovcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -635,6 +683,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/spcom/w">
         <IfModule mod_php5.c>
@@ -670,6 +721,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/chapcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -704,6 +758,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/wikimaniateam/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -735,6 +792,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/incubator/w">
         <IfModule mod_php5.c>
@@ -772,6 +832,9 @@
     RewriteCond %{SERVER_ADDR} !^211\.115\.107
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikipedia/species/$1 [R=302]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/species/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -803,6 +866,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/comcom/w">
         <IfModule mod_php5.c>
@@ -838,6 +904,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/searchcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -869,6 +938,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/usability/w">
         <IfModule mod_php5.c>
@@ -903,6 +975,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/arbcom_dewiki/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -934,6 +1009,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/arbcom_nlwiki/w">
         <IfModule mod_php5.c>
@@ -968,6 +1046,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/langcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1000,6 +1081,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/strategy/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1031,6 +1115,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/strategyapps/w">
         <IfModule mod_php5.c>
@@ -1067,6 +1154,9 @@
 
     RewriteRule ^/math/(.*) https://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/office/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1102,6 +1192,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/nomcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1136,6 +1229,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/chair/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1167,6 +1263,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/advisory/w">
         <IfModule mod_php5.c>
@@ -1202,6 +1301,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/auditcom/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1234,6 +1336,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/quality/w">
         <IfModule mod_php5.c>
@@ -1270,6 +1375,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/otrs-wiki/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1303,6 +1411,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/exec/w">
         <IfModule mod_php5.c>
@@ -1338,6 +1449,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/collab/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1370,6 +1484,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/outreach/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1401,6 +1518,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/arbcom_fiwiki/w">
         <IfModule mod_php5.c>
@@ -1436,6 +1556,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/movementroles/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1467,6 +1590,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/tenwiki/w">
         <IfModule mod_php5.c>
@@ -1502,6 +1628,9 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
+
     <Directory "/usr/local/apache/common/docroot/checkuser/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
@@ -1535,6 +1664,9 @@
     RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Call the local thumb_handler to transform image rescaling requests to the format needed by thumb.php
+    RewriteRule ^/thumb/.*$ /w/thumb_handler.php
 
     <Directory "/usr/local/apache/common/docroot/steward/w">
         <IfModule mod_php5.c>
