Bug 38905 - ShortUrl does not work on non wikipedia projects
Change-Id: Ifa2cc18766c1a418183de69f1cddee990cef170e

--- a/main.conf
+++ b/main.conf
@@ -67,6 +67,9 @@
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
+
     # Test for making favicon.ico a script
     RewriteRule ^/test-favicon\.ico$ /w/favicon.php [L]
 
@@ -131,6 +134,9 @@
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
+
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
@@ -330,6 +336,9 @@
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
+
     # Send www.de.wikibooks.org -> de.wikibooks.org
     RewriteCond %{HTTP_HOST} www.([a-z-]+).wikibooks.(com|net|org)
     RewriteRule ^(.*)$ http://%1.wikibooks.org$1 [R=301,L]
@@ -395,6 +404,9 @@
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
+
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikisource.org -> de.wikisource.org
     RewriteCond %{HTTP_HOST} www.([a-z-]+).wikisource.(com|net|org)
@@ -462,6 +474,9 @@
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
+
     # Send www.de.wikinews.org -> de.wikinews.org
     RewriteCond %{HTTP_HOST} www.([a-z-]+).wikinews.(com|net|org)
     RewriteRule ^(.*)$ http://%1.wikinews.org$1 [R=301,L]
@@ -524,6 +539,9 @@
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
+
+    # ShortURL redirect RT-2121
+    RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikiversity.org -> de.wikiversity.org
     RewriteCond %{HTTP_HOST} www.([a-z-]+).wikiversity.(com|net|org)
