--- a/redirects.conf
+++ b/redirects.conf
@@ -48,6 +48,7 @@
         status.wikipedia.org \
         textbook.wikipedia.org \
         vikimedija.org *.vikimedija.org \
+        wicipediacymraeg.org *.wicipediacymraeg.org \
         wikibooks.org \
         wikibook.org *.wikibook.org wikibook.com wikibooks.com *.wikibook.com \
         wikibooks.de www.wikibooks.de *.wikibooks.com \
@@ -342,6 +343,9 @@
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
 
     # Localised TLDs
+
+    RewriteCond %{HTTP_HOST} (^|\.)wicipediacymraeg\.org$
+    RewriteRule ^(.*)$ http://cy.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikipedia.org.il
     RewriteRule ^(.*)$ http://he.wikipedia.org$1 [R=301,L]
