add redirect for wikimedia.biz -> wikimedia.org
Change-Id: Ib506231768bbdb1294118a48bff54d4b606b517d

--- a/redirects.conf
+++ b/redirects.conf
@@ -67,6 +67,7 @@
         wikimaps.org *.wikimaps.org \
         wikimaps.com *.wikimaps.com \
         wikimedia.lt *.wikimedia.lt \
+        wikimedia.biz *.wikimedia.biz \
         wikimediafoundation.com *.wikimediafoundation.com \
         *.wikimediafoundation.org \
         wikimediafoundation.net *.wikimediafoundation.net \
@@ -406,6 +407,9 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.co.uk$
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} (^|\.)wikimedia.biz$
+    RewriteRule ^(.*)$ http://wikimedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimedia.lt$
     RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
