change bugzilla redir target to HTTPS; consolidate
Change-Id: Ieccd910a71edce8464f5e0b00ca3a66563f914ae

--- a/redirects.conf
+++ b/redirects.conf
@@ -487,9 +487,6 @@
     RewriteCond %{HTTP_HOST} =wikisource.com
     RewriteRule ^(.*)$ http://wikisource.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} =bugzilla.wikipedia.org
-    RewriteRule ^(.*)$ http://bugzilla.wikimedia.org$1 [R=301,L]
-
     RewriteCond %{HTTP_HOST} =commons.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =www.commons.wikimedia.org
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
@@ -497,9 +494,10 @@
     RewriteCond %{HTTP_HOST} =species.wikipedia.org
     RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L]
 
+    RewriteCond %{HTTP_HOST} =bugzilla.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =bugs.mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
-    RewriteRule ^(.*)$ http://bugzilla.wikimedia.org$1 [R=302,L]
+    RewriteRule ^(.*)$ https://bugzilla.wikimedia.org$1 [R=302,L]
 
     RewriteCond %{HTTP_HOST} =mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
