redirects for develop{,er{,s}}.wiki{p,m}edia.org
-> [[mw:developer hub]]

Change-Id: Ifa3c5e9988da162b2dde65e66bcb180f96161783

--- a/redirects.conf
+++ b/redirects.conf
@@ -11,6 +11,12 @@
         bugzilla.mediawiki.org \
         bugs.mediawiki.org \
         bugzilla.wikipedia.org \
+        develop.wikipedia.org \
+        developer.wikipedia.org \
+        developers.wikipedia.org \
+        develop.wikimedia.org \
+        developer.wikimedia.org \
+        developers.wikimedia.org \
         cs.wikimedia.org \
         cz.wikibooks.org \
         cz.wikimedia.org \
@@ -500,6 +506,14 @@
     RewriteCond %{HTTP_HOST} =bugs.mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
     RewriteRule ^(.*)$ http://bugzilla.wikimedia.org$1 [R=302,L]
+
+    RewriteCond %{HTTP_HOST} =develop.wikipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =developer.wikipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =developers.wikipedia.org [OR]
+    RewriteCond %{HTTP_HOST} =develop.wikimedia.org [OR]
+    RewriteCond %{HTTP_HOST} =developer.wikimedia.org [OR]
+    RewriteCond %{HTTP_HOST} =developers.wikimedia.org
+    RewriteRule ^(.*)$ https://www.mediawiki.org/wiki/Developer_hub [R=302,L]
 
     RewriteCond %{HTTP_HOST} =mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
