(bug 33464) developer.wikimedia.org redirect
This follow up a conversation on wikitech-l where Tomasz Finc suggested
setting up an easy to remember URL to give out to developers.

http://permalink.gmane.org/gmane.science.linguistics.wikipedia.technical/64048

This change need a DNS entry, probably a CNAME to www.mediawiki.org
where the page is hosted.

Change-Id: I07831b99ac31bb0803a0ba5683c487f50d6e35ed

--- a/redirects.conf
+++ b/redirects.conf
@@ -21,6 +21,7 @@
         cz.wikiversity.org \
         cz.wiktionary.org \
         de-beta.wikipedia.org \
+        developer.wikimedia.org \
         dk.wikipedia.org \
         dk.wikibooks.org \
         dk.wiktionary.org \
@@ -458,6 +459,10 @@
     # Bookshelf Project
     RewriteCond %{HTTP_HOST} =bookshelf.wikimedia.org
     RewriteRule ^/(.*)$ http://outreach.wikimedia.org/wiki/Bookshelf/$1 [R=302,L]
+
+    # Developer hub (bug 33464)
+    RewriteCond %{HTTP_HOST} =developer.wikimedia.org
+    RewriteRule . http://www.mediawiki.org/wiki/Developer_hub [R=301,L]
 
     # Other projects
 
