--- a/remnant.conf
+++ b/remnant.conf
@@ -151,7 +151,39 @@
     </Directory>
 </VirtualHost>
 
-# vim: syn=apache sts=4 sw=4 autoindent
+# fdc.wikimedia.org - Funds Dissemination Committee Wiki
+<VirtualHost *>
+    DocumentRoot "/usr/local/apache/common/docroot/fdc"
+    ServerName fdc.wikimedia.org
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^/(.*)$ https://fdc.wikimedia.org/$1 [R=301,L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/fdc/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    # UseMod compatibility URLs
+    RewriteCond %{QUERY_STRING} ([^&;]+)
+    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+
+    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    <Directory "/usr/local/apache/common/docroot/fdc/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/fdc/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
 
 # Wikimania wiki
 <VirtualHost *>
