Initial apache config for Wikivoyage
Change-Id: I046030734a56eec0970c5bce7fecb4f64f189c52

--- a/main.conf
+++ b/main.conf
@@ -630,6 +630,46 @@
     Alias /zh-tw /usr/local/apache/common/docroot/wikiversity.org/w/index.php
 </VirtualHost>
 
+# Wikivoyage
+<VirtualHost *>
+    ServerName wikivoyage
+    ServerAlias *.wikivoyage.org
+    UseCanonicalName off
+    DocumentRoot "/usr/local/apache/common/docroot/wikivoyage.org"
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+
+    # www -> portal
+    RewriteCond %{HTTP_HOST} www.wikivoyage.org
+    RewriteRule ^/$ http://en.wikivoyage.org/wiki/Main_Page [R=301,L]
+
+    # www -> en
+    RewriteCond %{HTTP_HOST} www.wikivoyage.org
+    RewriteRule ^/(.*$) http://en.wikivoyage.org/$1 [R=301,L]
+
+    # Make robots.txt editable via Mediawiki:robots.txt
+    RewriteRule ^/robots.txt$ /w/robots.php [L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    <Directory "/usr/local/apache/common/docroot/wikivoyage.org/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/wikivoyage.org/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+
+</VirtualHost>
+
+
 # Wikipedias are now handled with a shared document root, above
 
 <IfModule mod_mmap_static.c>
