--- a/redirects.conf
+++ b/redirects.conf
@@ -540,6 +540,12 @@
     RewriteCond %{HTTP_HOST} wikimedia\.com$
     RewriteRule . http://wikimedia.org/ [R=301,L]
 
+    # wlm.wikimedia.org was used for Wiki Loves Monuments App in 2012
+    # TODO: this is not a human-usable site, can be killed (along with its DNS record)
+    # sometime in 2013
+    RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
+    RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L]
+
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
