add redirect rules for education / LiAnna (RT-3843)
Change-Id: I775a70566d46b1ed8b40465a43c8c7e57b6b4066

--- a/redirects.conf
+++ b/redirects.conf
@@ -315,6 +315,15 @@
     RewriteRule ^/(content|copyediting|definitions|featuredarticle|fivecriteria|illustrations|milestones|peerreviews|photos|reflectivepapers|translationarabic|translationspanish|videos|writearticle)$ http://outreach.wikimedia.org/wiki/Education/Case_Studies/$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =education.wikimedia.org
+    RewriteRule ^syllabus$ http://outreach.wikimedia.org/wiki/Education/The_Syllabus [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =education.wikimedia.org
+    RewriteRule ^welcometowikipedia$ http://commons.wikimedia.org/wiki/File:Welcome_to_Wikipedia_brochure_EN.pdf [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =education.wikimedia.org
+    RewriteRule ^instructorbasics$ http://commons.wikimedia.org/wiki/File:Instructor_Basics_How_to_Use_Wikipedia_as_a_Teaching_Tool.pdf [R=301,L]
+   
+    RewriteCond %{HTTP_HOST} =education.wikimedia.org
     RewriteRule . http://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L]
 
     RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.(com|net|info)$
