add missing ServerAlias for wlm.wikimedia.org redirect to toolserver
Change-Id: I5a57a6ab19a035f377e85f3b93d9a2a9e20015d9

--- a/redirects.conf
+++ b/redirects.conf
@@ -129,7 +129,8 @@
         shop.wikiversity.org store.wikiversity.org \
         shop.mediawiki.org store.mediawiki.org \
         shop.wikimediafoundation.org store.wikimediafoundation.org \
-        shop.wikipedia.org store.wikipedia.org
+        shop.wikipedia.org store.wikipedia.org \
+	wlm.wikimedia.org
 
     # allow caching for redirects
     <IfModule mod_headers.c>
