--- a/main.conf
+++ b/main.conf
@@ -633,9 +633,15 @@
 # Wikivoyage
 <VirtualHost *>
     ServerName wikivoyage
+
+    # These can be combined into *.wikivoyage when we know we're done importing
     ServerAlias nl.wikivoyage.org
     ServerAlias ru.wikivoyage.org
     ServerAlias sv.wikivoyage.org
+    ServerAlias fr.wikivoyage.org
+    ServerAlias en.wikivoyage.org
+    ServerAlias de.wikivoyage.org
+    ServerAlias it.wikivoyage.org
 
     UseCanonicalName off
     DocumentRoot "/usr/local/apache/common/docroot/wikivoyage.org"
